--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.avbravo</groupId>
     <artifactId>myappweb</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.1.8</version>
     <packaging>war</packaging>
 
     <name>myappweb</name>
@@ -15,22 +15,22 @@
     </properties>
     
     <dependencies>
-<!--      
-            <dependency>
-                <groupId>com.github.avbravo</groupId>
-                <artifactId>jmoordb</artifactId>
-                <version>0.1.7</version>
-            </dependency>-->
-            <dependency>
+          
+        <dependency>
+            <groupId>com.github.avbravo</groupId>
+            <artifactId>jmoordb</artifactId>
+            <version>0.1.8</version>
+        </dependency>
+<!--        <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>jmoordb</artifactId>
             <version>0.1.7.1</version>
+        </dependency>-->
+        <dependency>
+            <groupId>com.github.avbravo</groupId>
+            <artifactId>avbravoutils</artifactId>
+            <version>0.1.4</version>
         </dependency>
-  <dependency>
-<groupId>com.github.avbravo</groupId>
-<artifactId>avbravoutils</artifactId>
-<version>0.1.4</version>
-  </dependency>
         <dependency>
             <groupId>org.primefaces</groupId>
             <artifactId>primefaces</artifactId>
@@ -42,7 +42,7 @@
             <version>0.9.1</version>
             <scope>compile</scope>
         </dependency>
-        
+      
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
@@ -107,7 +107,7 @@
             <layout>default</layout>
             <name>Repository for library PrimeFaces-maven-lib</name>
         </repository>
-        <repository>
+       <repository>
             <id>jitpack.io</id>
             <url>https://jitpack.io</url>
         </repository>
