--- a/pom.xml
+++ b/pom.xml
@@ -18,8 +18,8 @@
           
         <dependency>
             <groupId>com.github.avbravo</groupId>
-            <artifactId>jmoordb</artifactId>
-            <version>0.1.9.2</version>
+            <artifactId>ejbjmoordb</artifactId>
+            <version>0.1.2</version>
         </dependency>
 <!--        <dependency>
             <groupId>${project.groupId}</groupId>
